--- a/src/vistas/PersonalMedico.form
+++ b/src/vistas/PersonalMedico.form
@@ -110,16 +110,16 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jLabel11" alignment="0" min="-2" pref="54" max="-2" attributes="0"/>
                               <Component id="jLabel10" alignment="0" min="-2" pref="54" max="-2" attributes="0"/>
-                              <Component id="jLabel9" alignment="0" min="-2" pref="54" max="-2" attributes="0"/>
                               <Component id="jLabel12" alignment="0" min="-2" pref="54" max="-2" attributes="0"/>
                               <Component id="jLabel14" alignment="0" min="-2" pref="54" max="-2" attributes="0"/>
                               <Component id="jLabel15" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
                               <Component id="jLabel16" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
+                              <Component id="jLabel9" min="-2" pref="98" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="campoNombre" min="-2" pref="132" max="-2" attributes="0"/>
-                              <Component id="campoDni" alignment="0" min="-2" pref="132" max="-2" attributes="0"/>
+                              <Component id="campoColegiado" alignment="0" min="-2" pref="132" max="-2" attributes="0"/>
                               <Component id="campoApellidos" alignment="0" min="-2" pref="206" max="-2" attributes="0"/>
                               <Component id="campoTelefono" alignment="0" min="-2" pref="132" max="-2" attributes="0"/>
                               <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
@@ -144,7 +144,7 @@
                   <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="campoDni" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="campoColegiado" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -189,7 +189,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="DNI"/>
+            <Property name="text" type="java.lang.String" value="N&#xba; de colegiado"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel10">
@@ -258,7 +258,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="campoApellidos">
         </Component>
-        <Component class="javax.swing.JTextField" name="campoDni">
+        <Component class="javax.swing.JTextField" name="campoColegiado">
         </Component>
         <Component class="javax.swing.JTextField" name="campoTelefono">
         </Component>
@@ -270,6 +270,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="REGISTRAR"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonRegistrarActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
